fixing overflow issues:

--- a/assets/css/collection.css
+++ b/assets/css/collection.css
@@ -2,18 +2,13 @@
     display: flex;
     justify-content: space-around;
     gap: 1;
-    width: 100vw;
     margin-top: 5vh;
 }
 
 .collection-products .product {
-    width: 20vw;
-    height: auto;
 }
 
 .collection-products .product img {
-    width: max-content;
-    height: max-content;
     object-fit: cover;
 }
 
@@ -23,5 +18,4 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    font-family: "iCiel Internacional" sans-serif;
 }
