--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,6 +1,6 @@
 .header {
     background-color: transparent;
-    width: 100vw;
+    width: 100%;
     height: 5vh;
     position:absolute;
     top: 0;
