--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -1,17 +1,18 @@
 .slider-section {
-  position: relative;
+  width: 100%;
+  overflow: hidden;
 }
 
 .slider-container {
   position: relative;
   overflow: hidden;
-    width: 100vw;
+    width: 100%;
 }
 
 .slider {
   display: flex;
   transition: transform 0.4s ease;
-  width: 100vw;
+  width: 100%;
   height: 70vh;
 }
 .slider img {
