--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -6,8 +6,6 @@
 .site-wrapper {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
-    min-width: 100vw;
     width: 100%;
     height: 100%;
 }
